# PortSight

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  v1.0.0_release_notes.md
.github/workflows/: tests.yml
portsight/: __init__.py  cli.py  exporter.py  output.py  resolver.py  scanner.py  services.py
tests/: __init__.py  conftest.py  test_portsight.py
