[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portsight"
version = "1.0.0"
description = "A professional-grade, high-performance multithreaded TCP port scanner."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
portsight = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["portsight", "main.py"]
